--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
   <!-- Шапка профиля -->
-  <header> 
-   <nav>
+  <header class="header"> 
+   <nav class="header-nav">
       <a href="/" lang="en"> <span>Web</span>Studio</a>
-      <ul>
-        <li><a href="">Студия</a></li>
-        <li><a href="">Портфолио</a></li>
-        <li><a href="">Контакты</a></li>
+      <ul class="header-list">
+        <li class="header-item"><a href="">Студия</a></li>
+        <li class="header-item"><a href="">Портфолио</a></li>
+        <li class="header-item"><a href="">Контакты</a></li>
       </ul>
     </nav>
     <ul>
