--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" 
+  rel="stylesheet">
   <title>Web Studio</title>
   <link rel="stylesheet" href="/css/styles.css">
 </head>
@@ -11,98 +15,97 @@
   <!-- Шапка профиля -->
   <header class="header"> 
    <nav class="header-nav">
-      <a href="/" lang="en"> <span>Web</span>Studio</a>
+      <a class="logo" href="/" lang="en"> <span class="logo-first">Web</span>Studio</a>
       <ul class="header-list">
-        <li class="header-item"><a href="">Студия</a></li>
-        <li class="header-item"><a href="">Портфолио</a></li>
-        <li class="header-item"><a href="">Контакты</a></li>
+        <li class="header-item"><a href="" class="header-link">Студия</a></li>
+        <li class="header-item"><a href="" class="header-link">Портфолио</a></li>
+        <li class="header-item"><a href="" class="header-link">Контакты</a></li>
       </ul>
     </nav>
-    <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+    <ul class="header-contacts">
+        <li class="header-tel"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li class="header-mail"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
     </ul>
   </header>
   <main>
     <!-- Герой -->
-    <section>
-      <h1>Эффективные решения <br> для вашего бизнеса </h1>
-      <button type="button">Заказать услугу</button>
+    <section class="hero">
+      <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса </h1>
+      <button type="button" class="hero-btn">Заказать услугу</button>
     </section>
   <!-- Особенности -->
-  <section>
-    <h2>Особенности</h2>
-    <ul>
-      <li>
-        <h3>Внимание к деталям</h3>
-        <p>Идейные соображения, а также начало повседневной работы по формированию позиции.
+  <section class="hang">
+    <h2 class="hang-title">Особенности</h2>
+    <ul class="hang-list">
+      <li class="hang-item">
+        <h3 class="hang-subtitle">Внимание к деталям</h3>
+        <p class="hang-text">Идейные соображения, а также начало повседневной работы по формированию позиции.
         </p>
       </li>
-      <li>
-        <h3>Пунктуальность</h3>
-        <p>
+      <li class="hang-item">
+        <h3 class="hang-subtitle">Пунктуальность</h3>
+        <p class="hang-text">
           Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
         </p>
       </li>
-      <li>
-        <h3>Планирование</h3>
-        <p>Равным образом консультация с широким активом в значительной степени обуславливает.
+      <li class="hang-item">
+        <h3 class="hang-subtitle">Планирование</h3>
+        <p class="hang-text">Равным образом консультация с широким активом в значительной степени обуславливает.
 
         </p>
       </li>
-      <li>
-        <h3>Современные технологии</h3>
-        <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+      <li class="hang-item">
+        <h3 class="hang-subtitle">Современные технологии</h3>
+        <p class="hang-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.
         </p>
       </li>
     </ul>
 
   </section>
   <!-- Чем мы занимаемся -->
-  <section>
-    <h2>Чем мы занимаемся</h2>
-    <ul>
-      <li><img src="./imges/img01.jpg" alt="Создание сайтов" width="370" height="294" ></li>
-      <li><img src="./imges/img02.jpg" alt="Адаптация под мобильные устройства" width="370" height="294"></li>
-      <li><img src="./imges/img03.jpg" alt="Выбор цветовой гаммы" width="370" height="294"></li>
+  <section class="about">
+    <h2 class="about-title">Чем мы занимаемся</h2>
+    <ul class="about-list">
+      <li class="about-item"><img src="./imges/img01.jpg" alt="Создание сайтов" width="370" height="294" ></li>
+      <li class="about-item"><img src="./imges/img02.jpg" alt="Адаптация под мобильные устройства" width="370" height="294"></li>
+      <li class="about-item"><img src="./imges/img03.jpg" alt="Выбор цветовой гаммы" width="370" height="294"></li>
     </ul>
   </section>
   <!-- Наша команда -->
-  <section>
-    <h2>Наша команда</h2>
-    <ul>
-      <li>
+  <section class="team">
+    <h2 class="team-title">Наша команда</h2>
+    <ul class="team-list">
+      <li class="team-item">
         <img src="./imges/img04.jpg" alt="фото Игорь Демьяненко" width="270" height="260">
-        <h3>Игорь Демьяненко</h3>
-        <p lang="en">Product Designer</p>
+        <h3 class="team-after-title">Игорь Демьяненко</h3>
+        <p lang="en" class="team-text">Product Designer</p>
       </li>
-      <li>
+      <li class="team-item">
         <img src="./imges/img05.jpg" alt="фото Ольга Репина" width="270" height="260">
-        <h3>Ольга Репина</h3>
-        <p lang="en">Frontend Developer</p>
+        <h3 class="team-after-title">Ольга Репина</h3>
+        <p lang="en" class="team-text">Frontend Developer</p>
       </li>
-      <li>
+      <li class="team-item">
         <img src="./imges/img06.jpg" alt="фото Николай Тарасов" width="270" height="260">
-        <h3>Николай Тарасов</h3>
-        <p lang="en">Marketing</p>
+        <h3 class="team-after-title">Николай Тарасов</h3>
+        <p lang="en" class="team-text">Marketing</p>
       </li>
-       <li>
+       <li class="team-item">
         <img src="./imges/img07.jpg" alt="фото Михаил Ермаков" width="270" height="260">
-        <h3>Михаил Ермаков</h3>
-        <p lang="en">UI Designer</p>
+        <h3 class="team-after-title">Михаил Ермаков</h3>
+        <p lang="en" class="team-text">UI Designer</p>
       </li>
-
     </ul>
   </section>
   </main>
   <!-- Подвал -->
-  <footer>
-    <a href="/" lang="en"><span>Web</span>Studio</a>
-    <address>
-        <ul>
-            <li><a href="https://goo.gl/maps/b5EeNN71cbGi42LY8" target="_blank" rel ="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+  <footer class="footer">
+    <a class="logo" href="/" lang="en"><span class="logo-first">Web</span>Studio</a>
+    <address class="footer-adress">
+        <ul class="footer-list">
+            <li class="footer-item"><a href="https://goo.gl/maps/b5EeNN71cbGi42LY8" target="_blank" rel ="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
+            <li class="footer-item"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="footer-item"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </address>
   </footer>
