--- a/index.html
+++ b/index.html
@@ -4,29 +4,29 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Web Studio</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" 
   rel="stylesheet">
-  <title>Web Studio</title>
   <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
   <!-- Шапка профиля -->
   <header class="header"> 
-   <nav class="header-nav">
-      <a class="logo" href="/" lang="en"> <span class="logo-first">Web</span>Studio</a>
-      <ul class="header-list">
-        <li class="header-item"><a href="" class="header-link">Студия</a></li>
-        <li class="header-item"><a href="" class="header-link">Портфолио</a></li>
-        <li class="header-item"><a href="" class="header-link">Контакты</a></li>
-      </ul>
-    </nav>
-    <ul class="header-contacts">
-        <li class="header-tel"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li class="header-mail"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-    </ul>
-  </header>
+    <nav class="header-nav">
+       <a class="logo" href="/" lang="en"> <span class="logo-first">Web</span>Studio</a>
+       <ul class="header-list list">
+         <li class="header-item"><a href="./index.html" class="header-link">Студия</a></li>
+         <li class="header-item"><a href="./portfolio.html" class="header-link">Портфолио</a></li>
+         <li class="header-item"><a href="" class="header-link">Контакты</a></li>
+       </ul>
+     </nav>
+     <ul class="header-contacts list">
+         <li class="header-tel"><a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a></li>
+         <li class="header-mail"><a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a></li>
+     </ul>
+   </header>
   <main>
     <!-- Герой -->
     <section class="hero">
@@ -36,7 +36,7 @@
   <!-- Особенности -->
   <section class="hang">
     <h2 class="hang-title">Особенности</h2>
-    <ul class="hang-list">
+    <ul class="hang-list list">
       <li class="hang-item">
         <h3 class="hang-subtitle">Внимание к деталям</h3>
         <p class="hang-text">Идейные соображения, а также начало повседневной работы по формированию позиции.
@@ -65,7 +65,7 @@
   <!-- Чем мы занимаемся -->
   <section class="about">
     <h2 class="about-title">Чем мы занимаемся</h2>
-    <ul class="about-list">
+    <ul class="about-list list">
       <li class="about-item"><img src="./imges/img01.jpg" alt="Создание сайтов" width="370" height="294" ></li>
       <li class="about-item"><img src="./imges/img02.jpg" alt="Адаптация под мобильные устройства" width="370" height="294"></li>
       <li class="about-item"><img src="./imges/img03.jpg" alt="Выбор цветовой гаммы" width="370" height="294"></li>
@@ -74,7 +74,7 @@
   <!-- Наша команда -->
   <section class="team">
     <h2 class="team-title">Наша команда</h2>
-    <ul class="team-list">
+    <ul class="team-list list">
       <li class="team-item">
         <img src="./imges/img04.jpg" alt="фото Игорь Демьяненко" width="270" height="260">
         <h3 class="team-after-title">Игорь Демьяненко</h3>
@@ -102,10 +102,10 @@
   <footer class="footer">
     <a class="logo" href="/" lang="en"><span class="logo-first">Web</span>Studio</a>
     <address class="footer-adress">
-        <ul class="footer-list">
-            <li class="footer-item"><a href="https://goo.gl/maps/b5EeNN71cbGi42LY8" target="_blank" rel ="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
-            <li class="footer-item"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="footer-item"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="footer-list list">
+            <li class="footer-item"><a href="https://goo.gl/maps/b5EeNN71cbGi42LY8" target="_blank" rel ="noopener noreferrer" class="footer-link-map">г. Киев, пр-т Леси Украинки, 26</a></li>
+            <li class="footer-item"><a href="mailto:info@devstudio.com" class="footer-link">info@devstudio.com</a></li>
+            <li class="footer-item"><a href="tel:+380961111111" class="footer-link">+38 096 111 11 11</a></li>
         </ul>
     </address>
   </footer>
