--- a/portfolio.html
+++ b/portfolio.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Web Studio</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" 
   rel="stylesheet">
-  <title>Web Studio</title>
   <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
@@ -16,74 +16,94 @@
   <header class="header"> 
    <nav class="header-nav">
       <a class="logo" href="/" lang="en"> <span class="logo-first">Web</span>Studio</a>
-      <ul class="header-list">
-        <li class="header-item"><a href="" class="header-link">Студия</a></li>
-        <li class="header-item"><a href="" class="header-link">Портфолио</a></li>
+      <ul class="header-list list">
+        <li class="header-item"><a href="./index.html" class="header-link">Студия</a></li>
+        <li class="header-item"><a href="./portfolio.html" class="header-link">Портфолио</a></li>
         <li class="header-item"><a href="" class="header-link">Контакты</a></li>
       </ul>
     </nav>
-    <ul class="header-contacts">
-        <li class="header-tel"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li class="header-mail"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+    <ul class="header-contacts list">
+        <li class="header-tel"><a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a></li>
+        <li class="header-mail"><a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a></li>
     </ul>
   </header>
   <main>
-   <!-- Кнопки проектов -->
-   <section class="btn"> 
-       <button type="button">Все</button>
-       <button type="button">Веб-сайты</button>
-       <button type="button">Приложения</button>
-       <button type="button">Дизайн</button>
-       <button type="button">Маркетинг</button>
-       
+   <!-- Кнопки проектов добавить сюда н1-->
+   <section class="portfolio"> 
+       <h1 class="portfolio-title">Портфолио</h1>
+         <ul class="portfolio-list list">
+           <li class="portfolio-item"><button type="button" class="portfolio-btn">Все</button></li>
+           <li class="portfolio-item"><button type="button" class="portfolio-btn">Веб-сайты</button></li>
+           <li class="portfolio-item"><button type="button" class="portfolio-btn">Приложения</button></li>
+           <li class="portfolio-item"><button type="button" class="portfolio-btn">Дизайн</button></li>
+           <li class="portfolio-item"><button type="button" class="portfolio-btn">Маркетинг</button> </li>
+         </ul>         
    </section>
    <!-- Наши проекты -->
   <section class="projects">
-    <ul class="projects-list"> 
+    <ul class="projects-list list"> 
         <li class="projects-item">
-            <img src="./imges/technokryak.jpg" alt="Сайт Технокряк">
-            <h3 class="projects-title">Технокряк</h3>
-            <p class="projects-text">Веб-сайт</p>
+            <a href="">
+                <img src="./imges/technokryak.jpg" alt="Сайт Технокряк">
+                <h3 class="projects-title">Технокряк</h3>
+                <p class="projects-text">Веб-сайт</p>
+            </a>   
         </li>
         <li class="projects-item">
-            <img src="./imges/posterbasket.jpg" alt="Дизайн Постеров">
-            <h3 class="projects-title">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
-            <p class="projects-text">Дизайн</p>
+            <a href="">
+                <img src="./imges/posterbasket.jpg" alt="Дизайн Постеров">
+                <h3 class="projects-title">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
+                <p class="projects-text">Дизайн</p>
+            </a>
         </li>
         <li class="projects-item">
-            <img src="./imges/seefoodrestaurant.jpg" alt="Приложение для ресторана">
-            <h3 class="projects-title">Ресторан <span lang="en">Seafood</span></h3>
-            <p class="projects-text">Приложение</p>
+            <a href="">
+                <img src="./imges/seefoodrestaurant.jpg" alt="Приложение для ресторана">
+                <h3 class="projects-title">Ресторан <span lang="en">Seafood</span></h3>
+                <p class="projects-text">Приложение</p>
+            </a>
         </li>
         <li class="projects-item">
-            <img src="./imges/project_prime.jpg" alt="Проект Прайм">
-            <h3 class="projects-title">Проект <span lang="en">Prime</span></h3>
-            <p class="projects-text">Маркетинг</p>
+            <a href="">
+                <img src="./imges/project_prime.jpg" alt="Проект Прайм">
+                <h3 class="projects-title">Проект <span lang="en">Prime</span></h3>
+                <p class="projects-text">Маркетинг</p>
+            </a>
         </li>
         <li class="projects-item">
-            <img src="./imges/project_boxes.jpg" alt="Приложение для упаковки">
-            <h3 class="projects-title">Проект <span lang="en">Boxes</span></h3>
-            <p class="projects-text">Приложение</p>
+            <a href="">
+                <img src="./imges/project_boxes.jpg" alt="Приложение для упаковки">
+                <h3 class="projects-title">Проект <span lang="en">Boxes</span></h3>
+                <p class="projects-text">Приложение</p>
+            </a>
         </li>
         <li class="projects-item">
-            <img src="./imges/inspirationhasnoborders.jpg" alt="Сайт Без границ">
-            <h3 class="projects-title" lang="en">Inspiration has no Borders</h3>
-            <p class="projects-text">Веб-сайт</p>
+            <a href="">
+                <img src="./imges/inspirationhasnoborders.jpg" alt="Сайт Без границ">
+                <h3 class="projects-title" lang="en">Inspiration has no Borders</h3>
+                <p class="projects-text">Веб-сайт</p>
+            </a> 
         </li>
         <li class="projects-item">
-            <img src="./imges/limitededition.jpg" alt="Дизайн журнала">
-            <h3 class="projects-title">Издание <span lang="en">Limited Edition</span></h3>
-            <p class="projects-text">Дизайн</p>
+            <a href="">
+                <img src="./imges/limitededition.jpg" alt="Дизайн журнала">
+                <h3 class="projects-title">Издание <span lang="en">Limited Edition</span></h3>
+                <p class="projects-text">Дизайн</p>
+            </a>
         </li>
         <li class="projects-item">
-            <img src="./imges/projectlab.jpg" alt="Проект LAB">
-            <h3 class="projects-title">Проект <span lang="en">LAB</span></h3>
-            <p class="projects-text">Маркетинг</p>
+            <a href="">
+                <img src="./imges/projectlab.jpg" alt="Проект LAB">
+                <h3 class="projects-title">Проект <span lang="en">LAB</span></h3>
+                <p class="projects-text">Маркетинг</p>
+            </a>
         </li>
         <li class="projects-item">
-            <img src="./imges/growingbusiness.jpg" alt="приложение для бизнеса">
-            <h3 class="projects-title" lang="en">Growing Business</h3>
-            <p class="projects-text">Приложение</p>
+            <a href="">
+                <img src="./imges/growingbusiness.jpg" alt="приложение для бизнеса">
+                <h3 class="projects-title" lang="en">Growing Business</h3>
+                <p class="projects-text">Приложение</p>
+            </a>
         </li>
     </ul>
   </section>
@@ -92,10 +112,10 @@
   <footer class="footer">
     <a class="logo" href="/" lang="en"><span class="logo-first">Web</span>Studio</a>
     <address class="footer-adress">
-        <ul class="footer-list">
-            <li class="footer-item"><a href="https://goo.gl/maps/b5EeNN71cbGi42LY8" target="_blank" rel ="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
-            <li class="footer-item"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="footer-item"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="footer-list list">
+            <li class="footer-item"><a href="https://goo.gl/maps/b5EeNN71cbGi42LY8" target="_blank" rel ="noopener noreferrer" class="footer-link-map">г. Киев, пр-т Леси Украинки, 26</a></li>
+            <li class="footer-item"><a href="mailto:info@devstudio.com" class="footer-link">info@devstudio.com</a></li>
+            <li class="footer-item"><a href="tel:+380961111111" class="footer-link">+38 096 111 11 11</a></li>
         </ul>
     </address>
   </footer>
