--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
       <a class="logo" href="/" lang="en"> <span class="logo-first">Web</span>Studio</a>
       <ul class="header-list list">
         <li class="header-item"><a href="./index.html" class="header-link">Студия</a></li>
-        <li class="header-item"><a href="./portfolio.html" class="header-link">Портфолио</a></li>
+        <li class="header-item"><a href="./portfolio.html" class="header-link curent">Портфолио</a></li>
         <li class="header-item"><a href="" class="header-link">Контакты</a></li>
       </ul>
     </nav>
