--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav class="header-nav">
        <a class="logo" href="/" lang="en"> <span class="logo-first">Web</span>Studio</a>
        <ul class="header-list list">
-         <li class="header-item"><a href="./index.html" class="header-link">Студия</a></li>
+         <li class="header-item"><a href="./index.html" class="header-link curent">Студия</a></li>
          <li class="header-item"><a href="./portfolio.html" class="header-link">Портфолио</a></li>
          <li class="header-item"><a href="" class="header-link">Контакты</a></li>
        </ul>
