закрасил студия в футере белым

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   </main>
   <!-- Подвал -->
   <footer class="footer">
-    <a class="logo" href="/" lang="en"><span class="logo-first">Web</span>Studio</a>
+    <a class="logo-footer" href="/" lang="en"><span class="logo-first">Web</span>Studio</a>
     <address class="footer-adress">
         <ul class="footer-list list">
             <li class="footer-item"><a href="https://goo.gl/maps/b5EeNN71cbGi42LY8" target="_blank" rel ="noopener noreferrer" class="footer-link-map">г. Киев, пр-т Леси Украинки, 26</a></li>
